--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   get: ^4.5.1
   get_storage: ^2.0.3
   http: ^0.13.4
+  simple_animations: ^4.0.1
+  bouncing_widget: ^2.0.0
 
 dev_dependencies:
   flutter_test:
