--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   simple_animations: ^4.0.1
   bouncing_widget: ^2.0.0
   flutter_staggered_animations: ^1.0.0
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
