--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ flutter:
     - assets/images/minis/portrait/
     - assets/images/minis/thumbnail/
     - assets/images/icons/
+    - assets/images/maps/
 
   fonts:
     - family: ClashTitle
