--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
 
 flutter:
   uses-material-design: true
@@ -42,3 +43,8 @@ flutter:
     - family: SuperCellMagic
       fonts:
         - asset: assets/fonts/supercell-magic_0.ttf
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/images/icon_app_mini.jpg
