--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   url_launcher: ^6.0.17
   intl: ^0.17.0
+  just_the_tooltip: ^0.0.11+1
 
 dev_dependencies:
   flutter_test:
